[package]
name = "lol_best_adc_build_finder"
version = "14.23.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
cast_precision_loss = "warn"
cast_lossless = "warn"
doc_markdown = "warn"
from_iter_instead_of_collect = "warn"
manual_assert = "warn"
manual_let_else = "warn"
must_use_candidate = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"

# build with: cargo build --release --target=<target>
# common targets: - x86_64-pc-windows-msvc
#                 - x86_64-apple-darwin
#                 - x86_64-unknown-linux-gnu
#                 - aarch64-pc-windows-msvc
#                 - aarch64-apple-darwin
#                 - aarch64-unknown-linux-gnu
[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1

# run flamegraph with the command: cargo flamegraph --profile profiling
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"
panic = "unwind"

[dependencies]
constcat = "0.5.0"
enum-map = "2.7.3"
enumset = "1.1.5"
indexmap = "2.5.0"
indicatif = "0.17.8"
rayon = "1.10.0"
rustc-hash = "2.0.0"
strum = "0.26.3"
strum_macros = "0.26.4"
