[package]
name = "lol_best_adc_build_finder"
version = "14.24.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
cast_precision_loss = "warn"
cast_lossless = "warn"
doc_markdown = "warn"
from_iter_instead_of_collect = "warn"
manual_assert = "warn"
manual_let_else = "warn"
must_use_candidate = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"

# re-build for all profiles: cargo clean ; cargo build ; cargo build --release ; cargo build --profile profiling
# build for specific target: cargo build --release --target=x86_64-pc-windows-gnu
#                            cargo build --release --target=x86_64-pc-windows-gnullvm
#                            cargo build --release --target=x86_64-pc-windows-msvc

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1

# run flamegraph: cargo flamegraph --profile profiling
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"
panic = "unwind"

[dependencies]
constcat = "0.6.0"
enum-map = "2.7.3"
enumset = "1.1.5"
indexmap = "2.8.0"
indicatif = "0.17.11"
rayon = "1.10.0"
rustc-hash = "2.1.1"
strum = "0.27.1"
strum_macros = "0.27.1"
